Changes to be committed: 	modified:   EDA-1.ipynb 	modified:   ERGM.ipynb 	modified:   README.md 	modified:   TERGM.ipynb

--- a/ERGM.ipynb
+++ b/ERGM.ipynb
@@ -2,48 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8686e1d7",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import networkx as nx\n",
     "from networkx.algorithms import bipartite\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from datetime import timedelta\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "051534b6",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 16,
+   "id": "596706b0",
+   "metadata": {},
    "outputs": [],
    "source": [
+    "data_dir = 'C:/Users/udayk/OneDrive - stevens.edu/Documents/GitHub/sna-project/data'\n",
+    "os.chdir(data_dir)\n",
+    "filename='email-Eu-core-temporal.txt'\n",
     "# Read the dataset\n",
-    "data = pd.read_csv(\"data.txt\", delimiter=\" \", header=None, names=[\"node1\", \"node2\", \"weight\"])\n",
-    "\n",
+    "data = pd.read_csv(filename, delimiter=\" \", header=None, names=[\"node1\", \"node2\", \"weight\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "051534b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a graph\n",
     "G = nx.Graph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "efd3fab1",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add edges with weight attribute\n",
@@ -60,14 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "06b7c5f2",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes: 986\n",
+      "Number of edges: 16064\n",
+      "Density: 0.033080384262929745\n",
+      "Average degree: 32.5841784989858\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Print metrics\n",
     "print(f\"Number of nodes: {num_nodes}\")\n",
@@ -83,13 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "d01ed5e8",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import rpy2.robjects as ro\n",
@@ -100,13 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "6557a58f",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "statnet = importr(\"statnet\")\n",
@@ -119,26 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "50e09b5d",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e64a9bac",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3446719143.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [22]\u001b[1;36m\u001b[0m\n\u001b[1;33m    ergm_model = statnet.ergm(r_graph ~ statnet.edges() + statnet.nodematch(\"weight\"))\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "r_edges = r(\"as.matrix\")(r_data)\n",
     "r_graph = statnet.network(r_edges, matrix_type=\"edgelist\", directed=False)\n",
@@ -150,13 +145,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "a5fff355",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1349201938.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [23]\u001b[1;36m\u001b[0m\n\u001b[1;33m    ergm_model = statnet.ergm(r_graph ~ ergm_formula)\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "# Perform ERGM\n",
+    "ergm_formula = \"edges | nodematch('weight')\"\n",
+    "ergm_model = statnet.ergm(r_graph ~ ergm_formula)\n",
+    "print(ergm_model)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42419c41",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
